--- a/app/src/main/res/layout/row_community.xml
+++ b/app/src/main/res/layout/row_community.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -89,10 +90,7 @@
         android:paddingStart="@dimen/common_padding"
         android:paddingEnd="@dimen/common_padding"
         app:cardCornerRadius="15dp"
-        app:cardElevation="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/communityProfileConstraintLayout">
+        app:cardElevation="0dp">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/communityPostImage"
@@ -107,16 +105,14 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/communityContent"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_margin"
+        android:layout_marginEnd="@dimen/common_margin"
         android:layout_marginTop="@dimen/common_margin"
         android:ellipsize="end"
         android:maxLines="4"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_constraintBottom_toTopOf="@id/communityBottomLinerLayout"
-        app:layout_constraintEnd_toEndOf="@id/communityPostCardView"
-        app:layout_constraintStart_toStartOf="@id/communityPostCardView"
-        app:layout_constraintTop_toBottomOf="@id/communityPostCardView"
         tools:text="rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddrrrrrrrrrrrrrrrrrrrrrrrrrrrrr" />
 
 
@@ -207,4 +203,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityBottomLinerLayout" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
