feat : 채팅 메시지 타입별 레이아웃 구분해서 표시 1. 보낸 텍스트 메시지 2. 받은 텍스트 메시지 3. 날짜 구분선 4. 산책 메이트 신청 5. 산책 메이트 수락 6. 산책 메이트 거절

--- a/app/src/main/res/layout/fragment_walk_history_detail.xml
+++ b/app/src/main/res/layout/fragment_walk_history_detail.xml
@@ -204,7 +204,7 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/textViewRequestDate"
+                                android:id="@+id/text_view_request_date_time"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="메이트"
