--- a/app/src/main/res/layout/row_chat_walk_mate_request.xml
+++ b/app/src/main/res/layout/row_chat_walk_mate_request.xml
@@ -43,7 +43,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textViewRequestDate"
+                android:id="@+id/text_view_request_date_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
