--- a/app/src/main/res/menu/community_post_detail_comment.xml
+++ b/app/src/main/res/menu/community_post_detail_comment.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/item_comment_report"
-        android:title="@string/post_comment_report_text" />
+        android:id="@+id/item_comment_delete"
+        android:title="@string/post_comment_delete_text" />
 
 
 </menu>
