--- a/app/src/main/res/layout/row_place_review.xml
+++ b/app/src/main/res/layout/row_place_review.xml
@@ -69,8 +69,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="end">
+            android:gravity="end"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textViewPlaceReviewModify"
@@ -82,8 +82,7 @@
                 android:id="@+id/textViewPlaceReviewDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="12dp"
                 android:text="삭제" />
         </LinearLayout>
 
