--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -76,28 +76,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="에게 메시지 보내기" />
+            android:text="id 에게 메시지 보내기" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/editTextChangeUserId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="text" />
-
-        <Button
-            android:id="@+id/buttonTestChangeUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="로 유저 체인지" />
     </LinearLayout>
 
 </LinearLayout>
