--- a/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_nav_graph.xml"
-    app:startDestination="@id/item_chat">
+    app:startDestination="@id/item_walk">
 
     <fragment
         android:id="@+id/item_community"
