산책 시작부터 시간,거리 계산/내 현재 위치 실시간 업데이트/산책기록(리뷰 포함) db에 업로드

--- a/app/src/main/res/layout/fragment_walk.xml
+++ b/app/src/main/res/layout/fragment_walk.xml
@@ -151,8 +151,9 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/stop_circle_24px"
+                    android:src="@drawable/stop"
                     app:civ_border_color="#000000"
                     app:civ_border_overlay="true" />
             </LinearLayout>
