--- a/app/src/main/res/layout/row_community.xml
+++ b/app/src/main/res/layout/row_community.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/communityProfileConstraintLayout"
@@ -32,8 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_small_margin"
-            android:text="제목"
             android:maxLength="17"
+            android:text="제목"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/communityProfileImage"
@@ -48,7 +48,6 @@
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@id/communityPostTitle"
             app:layout_constraintTop_toBottomOf="@id/communityPostTitle" />
-
 
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -71,6 +70,29 @@
             app:layout_constraintStart_toEndOf="@id/placeDateDistinction"
             app:layout_constraintTop_toBottomOf="@id/communityPostTitle" />
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/communityPostCategoryCard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/common_margin"
+            android:elevation="0dp"
+            app:cardCornerRadius="3dp"
+            app:strokeColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@id/communityProfileImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/communityProfileImage">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/communityPostCategoryTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingStart="@dimen/common_small_padding"
+                android:paddingEnd="@dimen/common_small_padding"
+                android:textColor="@color/black"
+                tools:text="일상" />
+        </com.google.android.material.card.MaterialCardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.card.MaterialCardView
@@ -89,8 +111,8 @@
             android:id="@+id/communityPostImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"
             android:layout_gravity="center"
+            android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:srcCompat="@mipmap/ic_launcher" />
     </com.google.android.material.card.MaterialCardView>
@@ -101,8 +123,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/common_margin"
-        android:layout_marginEnd="@dimen/common_margin"
         android:layout_marginTop="@dimen/common_margin"
+        android:layout_marginEnd="@dimen/common_margin"
         android:ellipsize="end"
         android:maxLines="4"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -149,11 +171,11 @@
                 android:id="@+id/communityFavoriteCounter"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="0"
-                android:gravity="center"
-                android:textStyle="bold"
                 android:layout_marginStart="@dimen/common_small_margin"
+                android:gravity="center"
+                android:text="0"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/communityFavoriteTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/communityFavoriteTextView"
@@ -180,8 +202,8 @@
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/common_small_margin"
             android:text="0"
-            android:textStyle="bold"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -194,7 +216,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityBottomLinerLayout" />
-
 
 
 </LinearLayout>
