--- a/app/src/main/res/layout/row_chat_send_message.xml
+++ b/app/src/main/res/layout/row_chat_send_message.xml
@@ -11,7 +11,9 @@
         android:layout_height="match_parent"
         android:layout_marginEnd="8dp"
         android:gravity="bottom"
+        android:minWidth="80dp"
         android:text="오후 10:00"
+        android:textAlignment="textEnd"
         android:textAppearance="@style/TextAppearance.Material3.BodySmall" />
 
     <TextView
@@ -19,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/background_send_message"
+        android:maxWidth="300dp"
         android:padding="10dp"
         android:text="안녕하세요"
         android:textAlignment="textStart"
