--- a/app/src/main/res/layout/fragment_chat_room.xml
+++ b/app/src/main/res/layout/fragment_chat_room.xml
@@ -76,17 +76,19 @@
 
     </LinearLayout>
 
-    <com.google.android.material.divider.MaterialDivider
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp" />
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:background="?android:attr/listDivider" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMessage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         app:stackFromEnd="true" />
 
     <LinearLayout
@@ -107,17 +109,19 @@
             android:inputType="text|textMultiLine"
             android:maxLines="4"
             android:paddingLeft="16dp"
-            android:paddingTop="8dp"
+            android:paddingTop="10dp"
             android:paddingRight="16dp"
-            android:paddingBottom="8dp"
+            android:paddingBottom="10dp"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
 
         <Button
             android:id="@+id/buttonSendMessage"
             style="@style/Widget.Material3.Button.IconButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:enabled="false"
+            android:minWidth="24dp"
+            android:minHeight="24dp"
             android:padding="0dp"
             app:icon="@drawable/send_24px"
             app:iconSize="24dp" />
