--- a/app/src/main/res/layout/row_chat_walk_mate_request.xml
+++ b/app/src/main/res/layout/row_chat_walk_mate_request.xml
@@ -4,7 +4,8 @@
     style="@style/Widget.Material3.CardView.Elevated"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,12 +21,12 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/event_24px"
                 android:layout_gravity="center"
                 android:layout_marginEnd="8dp"
                 android:adjustViewBounds="false"
                 android:background="@android:color/transparent"
                 android:scaleType="centerCrop"
+                android:src="@drawable/event_24px"
                 app:civ_border_overlay="true" />
 
             <TextView
