--- a/app/src/main/res/layout/fragment_walk_history.xml
+++ b/app/src/main/res/layout/fragment_walk_history.xml
@@ -79,7 +79,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView9"
+                                android:id="@+id/textViewBottomIsPetNeutered"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="3"
