--- a/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -41,5 +41,8 @@
         <action
             android:id="@+id/action_item_walk_to_item_shop"
             app:destination="@id/item_shop" />
+        <action
+            android:id="@+id/action_item_walk_to_item_chat"
+            app:destination="@id/item_chat" />
     </fragment>
 </navigation>
