feat : 사용자 닉네임, 반려겸 이름 나이 성별 나이 표시 firestore에서 document를 바로 toObject()로 파싱하기 위해 PetData, FirestoreUserBasicInfoData에 매개변수가 없는 기본 생성자 추가

--- a/app/src/main/res/layout/fragment_chat_room.xml
+++ b/app/src/main/res/layout/fragment_chat_room.xml
@@ -44,14 +44,14 @@
                     android:id="@+id/textViewUserNickName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="오늘도멍멍"
+                    android:text="닉네임"
                     android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
                 <TextView
                     android:id="@+id/textViewUserDogInfo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="멍멍이(믹스, 여), 3세" />
+                    android:text="이름(종, 성별), 나이" />
             </LinearLayout>
 
         </LinearLayout>
