fix : 커뮤니티 게시글 등록하고 뒤로 갈때 코루틴 처리 #130

--- a/app/src/main/res/layout/fragment_community_post_detail.xml
+++ b/app/src/main/res/layout/fragment_community_post_detail.xml
@@ -120,12 +120,10 @@
                         app:cardCornerRadius="15dp"
                         app:cardElevation="0dp">
 
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/communityPostDetailPostImage"
+                        <androidx.viewpager2.widget.ViewPager2
+                            android:id="@+id/communityPostDetailViewPager2"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:adjustViewBounds="true"
-                            android:scaleType="fitCenter" />
+                            android:layout_height="match_parent" />
 
                     </com.google.android.material.card.MaterialCardView>
 
