feat : 사용자 신고 대상 닉네임 표시

--- a/app/src/main/res/navigation/chat.xml
+++ b/app/src/main/res/navigation/chat.xml
@@ -43,5 +43,8 @@
         <argument
             android:name="reportedUserId"
             app:argType="string" />
+        <argument
+            android:name="reportedUserNickname"
+            app:argType="string" />
     </fragment>
 </navigation>
