--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -54,7 +54,7 @@
                                 android:id="@+id/imageView"
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
-                                android:src="@drawable/account_circle_24px"/>
+                                tools:src="@drawable/account_circle_24px"/>
 
                             <LinearLayout
                                 android:layout_width="0dp"
@@ -67,20 +67,20 @@
                                     android:id="@+id/textViewNickname"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="닉네임"
+                                    tools:text="닉네임"
                                     android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
 
                                 <TextView
                                     android:id="@+id/textViewGenderAge"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="여/23세" />
+                                    tools:text="여/23세" />
 
                                 <TextView
                                     android:id="@+id/textViewAvailable"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="오후 7:00 이후" />
+                                    tools:text="오후 7:00 이후" />
                             </LinearLayout>
 
                             <ImageView
