--- a/app/src/main/res/layout/row_chat_walk_mate_request.xml
+++ b/app/src/main/res/layout/row_chat_walk_mate_request.xml
@@ -72,6 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1"
+                android:enabled="false"
                 android:text="수락" />
 
             <Button
@@ -79,6 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:enabled="false"
                 android:text="거절" />
         </LinearLayout>
     </LinearLayout>
